--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ jinja2==2.10.3            # via flask
 markupsafe==1.1.1         # via jinja2
 pillow==6.2.1
 python-dotenv==0.10.3
+python-magic==0.4.15
 requests==2.22.0
 urllib3==1.25.6           # via requests
 werkzeug==0.16.0          # via flask
