--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,6 @@ pillow==6.2.1
 python-dotenv==0.10.3
 python-magic==0.4.15
 requests==2.22.0
+timeloop==1.0.2
 urllib3==1.25.6           # via requests
 werkzeug==0.16.0          # via flask
