--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==2.8                 # via requests
 itsdangerous==1.1.0       # via flask
 jinja2==2.10.3            # via flask
 markupsafe==1.1.1         # via jinja2
+lxml==4.4.2
 pillow==6.2.1
 python-dotenv==0.10.3
 python-magic==0.4.15
