Add CORS policy on storage_server

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 certifi==2019.9.11        # via requests
 chardet==3.0.4            # via requests
 click==7.0                # via flask
+flask-cors==3.0.8
 flask==1.1.1
 idna==2.8                 # via requests
 itsdangerous==1.1.0       # via flask
@@ -17,6 +18,7 @@ pillow==6.2.1
 python-dotenv==0.10.3
 python-magic==0.4.15
 requests==2.22.0
+six==1.13.0               # via flask-cors
 timeloop==1.0.2
 urllib3==1.25.6           # via requests
 werkzeug==0.16.0          # via flask
