--- a/rootme-badge-helm-chart/Chart.yaml
+++ b/rootme-badge-helm-chart/Chart.yaml
@@ -1,3 +1,5 @@
-apiVersion: v1 
+apiVersion: v1
+appVersion: "1.0"
+description: A Helm chart for RootMe-Badge-Generator
 name: rootme-badge-generator 
-version: 0.1 
+version: 0.1
