--- a/rootme-badge-helm-chart/values.yaml
+++ b/rootme-badge-helm-chart/values.yaml
@@ -1,1 +1,3 @@
-image: zteeed/rootme-badge-generator:2022-06-06-22-02-57
+image: username/rootme-badge-generator:version
+rootme_username: test 
+rootme_password: test
