--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,8 +6,8 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
-  IMAGE_VERSION: $(date +%Y-%m-%d-%H-%M-%S)
+#env:
+#  IMAGE_VERSION: $(date +%Y-%m-%d-%H-%M-%S)
 
 jobs:
   build:
@@ -17,18 +17,37 @@ jobs:
     - name: Set output
       id: vars
       run: echo ::set-output name=tag::$(date +%Y-%m-%d-%H-%M-%S)
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    #- name: Set up Docker Buildx
+    #  uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:${{ env.IMAGE_VERSION }}
-
-
+    #- name: Build and push
+    #  uses: docker/build-push-action@v3
+    #  with:
+    #    push: true
+    #    tags: ${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:${{ steps.vars.outputs.tag }}
+  deploy:
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v3
+      - name: Compute image version
+        run: |
+          export IMAGE_VERSION=$(curl -s https://registry.hub.docker.com/v1/repositories/${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator/tags
+          |jq -r '.[-1].name')
+          ls -la
+        shell: bash
+      - name: Compute values.yaml
+        run: |
+          cat > /tmp/values-$IMAGE_VERSION.yaml << EOF
+          image: "${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:$IMAGE_VERSION"
+          rootme_username: ${{ secrets.ROOTME_ACCOUNT_USERNAME }}
+          rootme_password: ${{ secrets.ROOTME_ACCOUNT_PASSWORD }}
+          EOF
+          ls -la
+          pwd
+        shell: bash
+    
 
