--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,21 +33,24 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
+      - name: Compute stuff
+        run: >-
+          pwd && ls -la
+        shell: bash
       - name: Compute image version
-        run: |
-          export IMAGE_VERSION=$(curl -s https://registry.hub.docker.com/v1/repositories/${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator/tags
-          |jq -r '.[-1].name')
-          ls -la
+        run: >-
+          export IMAGE_VERSION=$(
+            curl -s https://registry.hub.docker.com/v1/repositories/${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator/tags
+            |jq -r '.[-1].name'
+          )
         shell: bash
       - name: Compute values.yaml
-        run: |
+        run: >-
           cat > /tmp/values-$IMAGE_VERSION.yaml << EOF
           image: "${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:$IMAGE_VERSION"
           rootme_username: ${{ secrets.ROOTME_ACCOUNT_USERNAME }}
           rootme_password: ${{ secrets.ROOTME_ACCOUNT_PASSWORD }}
           EOF
-          ls -la
-          pwd
         shell: bash
     
 
