Add custom namespace

--- a/charts/templates/deployment.yml
+++ b/charts/templates/deployment.yml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: rootme
   name: rootme-service 
 spec:
   selector:
@@ -17,6 +18,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: rootme
   name: rootme 
 spec:
   selector:
