--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: ["master"]
 
-#env:
-#  IMAGE_VERSION: $(date +%Y-%m-%d-%H-%M-%S)
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,18 +14,18 @@ jobs:
     - name: Set output
       id: vars
       run: echo ::set-output name=tag::$(date +%Y-%m-%d-%H-%M-%S)
-    #- name: Set up Docker Buildx
-    #  uses: docker/setup-buildx-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    #- name: Build and push
-    #  uses: docker/build-push-action@v3
-    #  with:
-    #    push: true
-    #    tags: ${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:${{ steps.vars.outputs.tag }}
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:${{ steps.vars.outputs.tag }}
   deploy:
     needs: [build]
     runs-on: self-hosted
@@ -49,5 +46,10 @@ jobs:
           rootme_password: ${{ secrets.ROOTME_ACCOUNT_PASSWORD }}
           EOF
         shell: bash
+      - name: Apply helm release
+        run: |
+          helm upgrade --install rootme-badge-generator -f /tmp/values-$IMAGE_VERSION.yaml ./charts
+        shell: bash 
+        
     
 
