--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,8 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set output
-      id: vars
-      run: echo ::set-output name=tag::$(date +%Y-%m-%d-%H-%M-%S)
+      run: echo "IMAGE_VERSION=${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
+    - name: Show env
+      run: echo $IMAGE_VERSION
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
@@ -25,19 +26,21 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:${{ steps.vars.outputs.tag }}
+        tags: ${{ env.IMAGE_VERSION }}
   deploy:
-    needs: [build]
+    needs: build
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
+      - name: Show env
+        run: echo $IMAGE_VERSION
       - name: Compute image version
         run: >
           export IMAGE_VERSION=$(
             curl -s https://registry.hub.docker.com/v1/repositories/${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator/tags \
             | jq -r '.[-1].name'
-          )
-        shell: bash
+          ) \
+          echo $IMAGE_VERSION
       - name: Compute values.yaml
         run: |
           cat > /tmp/values-$IMAGE_VERSION.yaml << EOF
@@ -45,11 +48,9 @@ jobs:
           rootme_username: ${{ secrets.ROOTME_ACCOUNT_USERNAME }}
           rootme_password: ${{ secrets.ROOTME_ACCOUNT_PASSWORD }}
           EOF
-        shell: bash
       - name: Apply helm release
         run: |
           helm upgrade --install rootme-badge-generator -f /tmp/values-$IMAGE_VERSION.yaml ./charts
-        shell: bash 
         
     
 
