--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set output
       run: echo "IMAGE_VERSION=${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
-    - name: Show env
-      run: echo $IMAGE_VERSION
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
@@ -32,15 +30,12 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
-      - name: Show env
-        run: echo $IMAGE_VERSION
       - name: Compute image version
         run: >
           export IMAGE_VERSION=$(
             curl -s https://registry.hub.docker.com/v1/repositories/${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator/tags \
             | jq -r '.[-1].name'
-          ) \
-          echo $IMAGE_VERSION
+          ) && echo $IMAGE_VERSION
       - name: Compute values.yaml
         run: |
           cat > /tmp/values-$IMAGE_VERSION.yaml << EOF
