--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,27 +2,17 @@ name: Build & Deploy
 
 on:
   push:
-    branches: ["master"]
+    branches:
+      - master
+    paths:
+      - "!requirements.txt"
+      - "!.github/**"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Get changed files
-      id: changed-files
-      uses: tj-actions/changed-files@v22.2
-    - name: List all changed files
-      run: |       
-        for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-          echo "$file was changed"
-        done
-        if [[ $(echo ${{ steps.changed-files.outputs.all_changed_files }}) == "requirements.txt" ]]; then
-          exit 1 # dependabot
-        fi
-        if [[ $(echo ${{ steps.changed-files.outputs.all_changed_files }}) == "" ]]; then
-          exit 1 # no changes
-        fi
     - name: Set output
       run: echo "IMAGE_VERSION=${{ secrets.DOCKERHUB_USERNAME }}/rootme-badge-generator:$(date +%Y-%m-%d-%H-%M-%S)" >> $GITHUB_ENV
     - name: Set up Docker Buildx
