--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,13 +1,27 @@
-name: auto-merge
+name: "Dependabot Automerge - Action"
 
 on:
   pull_request:
 
 jobs:
-  auto-merge:
+  worker:
     runs-on: ubuntu-latest
+
+    if: github.actor == 'dependabot[bot]'
     steps:
-      - uses: actions/checkout@v2
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
+      - name: automerge
+        uses: actions/github-script@0.2.0
         with:
+          script: |
+            github.pullRequests.createReview({
+              owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              pull_number: context.payload.pull_request.number,
+              event: 'APPROVE'
+            })
+            github.pullRequests.merge({
+              owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              pull_number: context.payload.pull_request.number
+            })
           github-token: ${{ secrets.TOKEN }}
