--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,9 +15,9 @@ on:
   push:
     branches:
       - master
-    paths:
-      - "!requirements.txt"
-      - "!.github/**"
+    paths-ignore:
+      - "requirements.txt"
+      - ".github/**"
   pull_request:    
     # The branches below must be a subset of the branches above
     branches:
