--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
+    paths-ignore:  # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-including-paths
       - "requirements.txt"
       - ".github/**"
 
