--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Deploy rootme docker container
         run: >-
           (docker rm -f rootme || true) && docker run -d --restart always
-          -p 0.0.0.0:38084:80 --name badge_generator
+          -p 0.0.0.0:38084:80 --name rootme
           -e ROOTME_ACCOUNT_USERNAME=${{ secrets.ROOTME_ACCOUNT_USERNAME }}
           -e ROOTME_ACCOUNT_PASSWORD=${{ secrets.ROOTME_ACCOUNT_PASSWORD }}
           -v /volume1/docker/rootme/storage_clients:/app/storage_clients
